# Travel.Api/Models/Booking.cs
@@ -8,11 +8,8 @@ namespace Travel.Api.Models
 {
 	public class Booking
 	{
-		public string Status { get; set; }
 		public string OrderId { get; set; }
-		public string Comments { get; set; }
-		public DateTime Arrival { get; set; }
-		public DateTime Departure { get; set; }
+		public string Status { get; set; }
 		public Customer Customer { get; set; }
 		public List<BookingItem> Items { get; set; }
 		public Booking()
@@ -24,9 +21,8 @@ namespace Travel.Api.Models
 	public class BookingItem
 	{
 		public int ProductNumber { get; set; }
-		public DateTime StartTimeLocal { get; set; }
 		public int Quantity { get; set; }
-		public decimal Amount { get; set; }
+		public DateTime? UseDate { get; set; }
 		public List<Ticket> Tickets { get; set; }
 		public BookingItem()
 		{
@@ -44,20 +40,10 @@ namespace Travel.Api.Models
 
 	public class Customer
 	{
-		public string FirstName { get; set; }
-		public string LastName { get; set; }
 		public string Email { get; set; }
 		public string Phone { get; set; }
-		public Address Address { get; set; }
-	}
-
-	public class Address
-	{
-		public string Street { get; set; }
-		public string City { get; set; }
-		public string Province { get; set; }
-		public string PostalCode { get; set; }
-		public string Country { get; set; }
+		public string FirstName { get; set; }
+		public string LastName { get; set; }
 	}
 
 	public class BookingRequest
